# fortran-crazy-server

./: CMakeLists.txt  Dockerfile
src/: trigger.f90
